# agente-cotizador

./: CONTEXTO_PROYECTO.md  README.md  config.py  main.py  pyproject.toml  test_telegram.py
agent/: core.py  prompts.py  tools.py
agente_cotizador.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
app_db/: adapter.py
erp/: adapter.py
generador/: generator.py
models/: schemas.py
scheduler/: cron.py
telegram/: bot.py
